[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src"]


[project]
    name = "riaps-testsuite"
    version = "0.1.0"
    authors = [
      { name="RIAPS"},
    ]
    description = "A package to aid in testing riaps applications"
    readme = "README.md"
    requires-python = ">=3.8"
    classifiers = [
        "Programming Language :: Python :: 3",
        "Operating System :: Linux",
    ]
    dependencies = [
    ]

    [project.optional-dependencies]
    dev = [
        "pytest",
        "watchdog"
    ]

[project.urls]
"Homepage" = "https://github.com/RIAPS/interface.gpio"
"Bug Tracker" = "https://github.com/RIAPS/interface.gpio/issues"